# gilded-sentinel-sensors-client

./: Cargo.toml  build.bat  build.sh  config.toml  renovate.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: format.yml  release.yml  rust-base.yml
src/: config.rs  installer.rs  main.rs  main_loop.rs  models.rs  network.rs  sensor.rs
src/config/: config.rs  config_instance.rs  config_loader.rs  mod.rs
src/data/: models.rs
src/hardware/: esxi.rs  esxi_util.rs  mod.rs  sysinfo.rs  sysinfo_monitor.rs  system_information.rs  system_information_monitor.rs
src/network/: mod.rs  network_util.rs
src/sensor/: mock.rs  mod.rs  sensor.rs  sensor_util.rs
src/system/: execution_util.rs  installer.rs  mod.rs  signal.rs  system_util.rs
