[package]
name = "Gilded-Sentinel-Debian"
version = "0.1.7"
edition = "2021"
description = "A system monitoring and reporting tool for Debian-based systems."
authors = ["LunarLaurus"]
repository = "https://github.com/LunarLaurus/gilded-sentinel-sensors-client"
keywords = ["monitoring", "debian", "system"]
categories = ["system", "utilities"]


[dependencies]
# Argument parsing
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Signal handling for graceful shutdowns
libc = { version = "0.2", features = ["extra_traits"] }
signal-hook-registry = "1.4"
sysinfo = "0.29.2"

# Logging
log = "0.4"
env_logger = "0.11"