[package]
name = "Gilded-Sentinel-Client"
version = "0.1.13"
edition = "2021"
description = "A system monitoring and reporting tool for systems with lm-sensors or ESXi 7."
authors = ["LunarLaurus"]
repository = "https://github.com/LunarLaurus/gilded-sentinel-sensors-client"
keywords = ["monitoring", "system", "sensors", "esxi"]
categories = ["system", "utilities"]
license = "LGPL-3.0" # License updated to LGPL-3.0

[profile.dev]
debug = true
overflow-checks = true

[profile.release]
debug = true

[dependencies]
# --- Core Dependencies ---
serde = { version = "1.0", features = ["derive"] } # Serialization framework
serde_json = "1.0"                                # JSON support
toml = "0.8"                                     # TOML support

# --- Argument Parsing ---
clap = { version = "4.0", features = ["derive"] } # Command-line argument parsing

# --- Logging ---
log = "0.4"              # Logging facade
env_logger = "0.11"      # Logging implementation with environment configuration

# --- Signal Handling ---
libc = { version = "0.2", features = ["extra_traits"] } # Low-level system access
nix = "0.26.2"
signal-hook-registry = "1.4"                            # Signal handling

# --- System Monitoring ---
sysinfo = "0.33.1" # Cross-platform system information library
